# Turtlebot3

turtlebot3_description/urdf/: turtlebot3_waffle_pi.urdf.xacro
turtlebot3_navigation/: CMakeLists.txt  package.xml
turtlebot3_navigation/launch/: alp.launch  amcl.launch  turtlebot3_navigation.launch
turtlebot3_navigation/maps/: alp.yaml  berbat_harita.pgm  berbat_harita.yaml
turtlebot3_navigation/param/: costmap_common_params_waffle_pi.yaml  move_base_params.yaml
turtlebot3_navigation/rviz/: turtlebot3_navigation.rviz
turtlebot3_navigation/scripts/: my_first_try.py
