<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_navigation</name>
  <version>1.2.6</version>
  <description>
    The turtlebot3_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author>Leon Jung</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_navigation</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>aruco_detect</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>fiducial_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>opencv</build_depend> <!-- Add this line -->
  <build_export_depend>fiducial_msgs</build_export_depend>
  <build_export_depend>aruco_detect</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>aruco_detect</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>fiducial_msgs</exec_depend>
  <exec_depend>opencv</exec_depend> <!-- Add this line -->

</package>
